replace upload-templates.sh with tailor #38
Change summary:

- Use yml format allowing exec with multiple lines in code.
- Old templates were left untouched (to be removed later)
- New templates are in ocp_templates/ocp-config/ and
  configuration in
  ods-configuration/ods-project-quickstarters/ocp-config and
  ods-configuration/ods-project-quickstarters/templates
- Made sure that ocp-templates/Dockerfile assume same layout as
  on local file system.
- Rundeck to setup dockerbuild context.
- Provide rundeck jobs for testing ending in <original-name>-qs-38.yaml
- Improved consistency of rshiny label usage.
  This allows better specificity of tailor commands.
- Remove namespace entries in templates which appear to not
  be needed.

Scripts in ocp-templates/scripts:
- create-projects.sh exits when invoked with unknown parameter
- Some scripts support a -d|--debug flag which causes
  -v to be used in tailor invocations.
- Some scripts support a --status command so that tailor status is used.
- Simplified delete-component script using selectors.
- Extract portion of create-projects.sh into create-cd-jenkins.sh for
  easier testability.
- Better output log message.
- delete-rshiny-app.sh: add message to user explaining and showing
  shared resources which are not deleted.

--- a/ocp-templates/ocp-config/cd-jenkins-master/cd-jenkins-webhook-proxy.yml
+++ b/ocp-templates/ocp-config/cd-jenkins-master/cd-jenkins-webhook-proxy.yml
@@ -16,12 +16,14 @@ objects:
       app: jenkins-webhook-proxy
     name: webhook-proxy
   spec:
+    host: webhook-proxy-${PROJECT}-cd.${OD_OCP_SOURCE_APP_DOMAIN}
     tls:
       insecureEdgeTerminationPolicy: Redirect
       termination: edge
     to:
       kind: Service
       name: webhook-proxy
+      weight: 100
     wildcardPolicy: None
 - apiVersion: v1
   kind: Service
@@ -50,6 +52,7 @@ objects:
     name: webhook-proxy
   spec:
     replicas: 1
+    revisionHistoryLimit: 10
     selector:
       app: jenkins-webhook-proxy
     strategy:
@@ -72,14 +75,12 @@ objects:
         - env:
           - name: REPO_BASE
             value: '${REPO_BASE}'
-          - name: PROTECTED_BRANCHES
-            value: ${PROTECTED_BRANCHES}
           - name: TRIGGER_SECRET
             valueFrom:
               secretKeyRef:
                 key: trigger-secret
                 name: webhook-proxy
-          image: ''
+          image: ' '
           imagePullPolicy: Always
           name: webhook-proxy
           resources: {}
@@ -89,8 +90,6 @@ objects:
         restartPolicy: Always
         schedulerName: default-scheduler
         securityContext: {}
-        serviceAccount: jenkins
-        serviceAccountName: jenkins
         terminationGracePeriodSeconds: 30
     test: false
     triggers:
@@ -114,11 +113,13 @@ objects:
   data:
     trigger-secret: ${PIPELINE_TRIGGER_SECRET}
 parameters:
+- name: PROJECT
+  required: true
+- name: OD_OCP_SOURCE_APP_DOMAIN
+  required: true
 - name: NAMESPACE
   value: cd
 - name: REPO_BASE
-  value: REPO_BASE
-- name: PROTECTED_BRANCHES
-  value: "master,develop,production,staging,release/"
+  required: true
 - name: PIPELINE_TRIGGER_SECRET
-  value: PIPELINE_TRIGGER_SECRET
+  required: true
