--- a/ocp-templates/Dockerfile
+++ b/ocp-templates/Dockerfile
@@ -4,7 +4,9 @@ MAINTAINER "Andreas Bellmann" <andreas.bellmann@opitz-consulting.com>
 
 RUN oc version
 
-WORKDIR /data
-COPY scripts /data/
+WORKDIR /data/ods-project-quickstarters/ocp-templates/scripts
+COPY ods-project-quickstarters/ocp-templates/scripts    /data/ods-project-quickstarters/ocp-templates/scripts
+COPY ods-project-quickstarters/ocp-templates/ocp-config /data/ods-project-quickstarters/ocp-templates/ocp-config
+COPY ods-configuration                                  /data/ods-configuration
 
 ENTRYPOINT [""]
