--- a/ocp-templates/ocp-config/cd-jenkins-master/cd-jenkins-master.yml
+++ b/ocp-templates/ocp-config/cd-jenkins-master/cd-jenkins-master.yml
@@ -48,15 +48,20 @@ objects:
       template: cd-jenkins-master
       app: jenkins-master
   spec:
+    host: jenkins-${PROJECT}-cd.${OD_OCP_SOURCE_APP_DOMAIN}
     tls:
       insecureEdgeTerminationPolicy: Redirect
       termination: edge
     to:
       kind: Service
       name: '${JENKINS_SERVICE_NAME}'
+      weight: 100
+    wildcardPolicy: None
 - apiVersion: v1
   kind: PersistentVolumeClaim
   metadata:
+    finalizers:
+    - kubernetes.io/pvc-protection
     name: '${JENKINS_SERVICE_NAME}'
     labels:
       template: cd-jenkins-master
@@ -67,9 +72,12 @@ objects:
     resources:
       requests:
         storage: '${VOLUME_CAPACITY}'
+    storageClassName: gp2-encrypted
 - apiVersion: v1
   kind: PersistentVolumeClaim
   metadata:
+    finalizers:
+    - kubernetes.io/pvc-protection
     name: owasp-dependency-check
     labels:
       template: cd-jenkins-master
@@ -79,6 +87,7 @@ objects:
     resources:
       requests:
         storage: 1Gi
+    storageClassName: gp2-encrypted
 - apiVersion: v1
   kind: DeploymentConfig
   metadata:
@@ -89,9 +98,14 @@ objects:
       app: jenkins-master
   spec:
     replicas: 1
+    revisionHistoryLimit: 10
     selector:
       name: '${JENKINS_SERVICE_NAME}'
     strategy:
+      activeDeadlineSeconds: 21600
+      recreateParams:
+        timeoutSeconds: 600
+      resources: {}
       type: Recreate
     template:
       metadata:
@@ -100,8 +114,7 @@ objects:
           name: '${JENKINS_SERVICE_NAME}'
       spec:
         containers:
-        - capabilities: {}
-          env:
+        - env:
             - name: OPENSHIFT_ENABLE_OAUTH
               value: '${ENABLE_OAUTH}'
             - name: OPENSHIFT_ENABLE_REDIRECT_PROMPT
@@ -145,14 +158,21 @@ objects:
             httpGet:
               path: /login
               port: 8080
+              scheme: HTTP
             initialDelaySeconds: 120
+            periodSeconds: 10
+            successThreshold: 1
             timeoutSeconds: 3
           name: jenkins
           readinessProbe:
+            failureThreshold: 3
             httpGet:
               path: /login
               port: 8080
+              scheme: HTTP
             initialDelaySeconds: 3
+            periodSeconds: 10
+            successThreshold: 1
             timeoutSeconds: 3
           resources:
             limits:
@@ -163,16 +183,22 @@ objects:
             capabilities: {}
             privileged: false
           terminationMessagePath: /dev/termination-log
+          terminationMessagePolicy: File
           volumeMounts:
             - mountPath: '${JENKINS_HOME}'
               name: '${JENKINS_SERVICE_NAME}-data'
         dnsPolicy: ClusterFirst
         restartPolicy: Always
+        schedulerName: default-scheduler
+        securityContext: {}
+        serviceAccount: '${JENKINS_SERVICE_NAME}'
         serviceAccountName: '${JENKINS_SERVICE_NAME}'
+        terminationGracePeriodSeconds: 30
         volumes:
           - name: '${JENKINS_SERVICE_NAME}-data'
             persistentVolumeClaim:
               claimName: '${JENKINS_SERVICE_NAME}'
+    test: false
     triggers:
       - imageChangeParams:
           automatic: true
@@ -206,6 +232,9 @@ objects:
   subjects:
     - kind: ServiceAccount
       name: '${JENKINS_SERVICE_NAME}'
+      namespace: '${PROJECT}-cd'
+  userNames:
+    - system:serviceaccount:${PROJECT}-cd:jenkins
 - apiVersion: v1
   kind: Service
   metadata:
@@ -215,7 +244,6 @@ objects:
   spec:
     ports:
       - name: agent
-        nodePort: 0
         port: 50000
         protocol: TCP
         targetPort: 50000
@@ -237,7 +265,6 @@ objects:
   spec:
     ports:
       - name: web
-        nodePort: 0
         port: 80
         protocol: TCP
         targetPort: 8080
@@ -246,6 +273,10 @@ objects:
     sessionAffinity: None
     type: ClusterIP
 parameters:
+- name: PROJECT
+  required: true
+- name: OD_OCP_SOURCE_APP_DOMAIN
+  required: true
 - name: JENKINS_SERVICE_NAME
   value: jenkins
 - name: JNLP_SERVICE_NAME
@@ -263,26 +294,26 @@ parameters:
 - name: JENKINS_IMAGE_STREAM_TAG
   value: jenkins-master:latest
 - name: CD_USER_ID
-  value: CD_USER_ID
+  required: true
 - name: CD_USER_PWD
-  value: CD_USER_PWD
+  required: true
 - name: NEXUS_URL
-  value: NEXUS_URL
+  required: true
 - name: NEXUS_USERNAME
-  value: NEXUS_USERNAME
+  required: true
 - name: NEXUS_PASSWORD
-  value: NEXUS_PASSWORD
+  required: true
 - name: JENKINS_HOME
   value: /var/lib/jenkins
 - name: SONARQUBE_URL
-  value: SONARQUBE_URL
+  required: true
 - name: SONAR_SERVER_AUTH_TOKEN
-  value: SONAR_SERVER_AUTH_TOKEN
+  required: true
 - name: SHARED_LIBRARY_REPOSITORY
   value: opendevstack/ods-jenkins-shared-library.git
 - name: DOCKER_REGISTRY
-  value: DOCKER_REGISTRY
+  required: true
 - name: BITBUCKET_HOST
-  value: BITBUCKET_HOST
+  required: true
 - name: REPO_BASE
-  value: REPO_BASE
+  required: true
