--- a/rundeck-jobs/common/prepare-continuous-integration.yaml
+++ b/rundeck-jobs/common/prepare-continuous-integration.yaml
@@ -7,7 +7,7 @@
   nodeFilterEditable: false
   options:
   - description: |-
-      the type of component to create (i.e. springboot-be, angular-frontend). 
+      the type of component to create (i.e. springboot-be, angular-frontend).
       The component type must be created first in the quickstarter project
     enforced: true
     name: component_type
@@ -49,8 +49,15 @@
   scheduleEnabled: true
   sequence:
     commands:
-    - description: clone quickstarter project
-      exec: mkdir /tmp/rundeck_${job.id}_${job.execid} && cd  /tmp/rundeck_${job.id}_${job.execid} && git clone ${globals.bitbucket_sshhost}/opendevstack/ods-project-quickstarters.git && cd ods-project-quickstarters && git checkout origin/production
+    - description: clone quickstarter project - origin/production
+      script: |-
+        set -eux
+        mkdir "/tmp/rundeck_@job.id@_@job.execid@"
+        cd "/tmp/rundeck_@job.id@_@job.execid@"
+        git clone @globals.bitbucket_sshhost@/opendevstack/ods-project-quickstarters.git
+        cd ods-project-quickstarters
+        # Here the branch can be changed for testing purposes
+        git checkout origin/production
     - description: create component in openshift
       jobref:
         args: -project_id ${option.project_id} -component_id ${option.component_id} -git_url_http ${option.git_url_http}
@@ -59,9 +66,10 @@
         nodeStep: 'true'
     - description: add Jenkinsfile to generated project
       script: |-
+        set -eux
         sudo mkdir -p @option.quickstarter_directory@
         sudo chown @globals.rundeck_os_user@ -R @option.quickstarter_directory@
-        cd /tmp/rundeck_@job.id@_@job.execid@/ods-project-quickstarters/boilerplates 
+        cd /tmp/rundeck_@job.id@_@job.execid@/ods-project-quickstarters/boilerplates
         ./renderJenkinsTemplate.sh \
           --target @option.quickstarter_directory@/Jenkinsfile \
           --url @option.git_url_http@ \
@@ -70,6 +78,7 @@
           --component-type @option.component_type@
     - description: add sonar-project.properties to generated project
       script: |-
+        set -eux
         sudo chown @globals.rundeck_os_user@ -R @option.quickstarter_directory@
         cd /tmp/rundeck_@job.id@_@job.execid@/ods-project-quickstarters/boilerplates
         ./renderSonarqubeTemplate.sh \
@@ -77,9 +86,8 @@
           --project-id @option.project_id@ \
           --component-id @option.component_id@  \
           --component-type @option.component_type@
-    - description: push repository to github
+    - description: Push to Bitbucket
       exec: cd /tmp/rundeck_${job.id}_${job.execid}/ods-project-quickstarters/boilerplates && ./git_push.sh --dir ${option.quickstarter_directory} --url ${option.git_url_ssh}
     keepgoing: false
     strategy: node-first
   uuid: ffa290f1-eaa0-4f7b-92fe-1f1c169b6349
-
