--- a/rundeck-jobs/openshift/create-projects.master.yaml
+++ b/rundeck-jobs/openshift/create-projects.master.yaml
@@ -1,26 +1,24 @@
 - defaultTab: summary
-  description: 'deletes an openshift component (for project bhw and component bhw-be:
-    bhw-be)'
+  description: 'creates the openshift projects (for bhw: bhw-cd, bhw-dev, bhw-test)'
   executionEnabled: true
   group: openshift
-  id: 33a85b29-0199-4059-b1fb-d0c254e89fab
+  id: 00f767ef-347f-480e-8ad3-bf2aed3abf5d
   loglevel: INFO
-  name: delete-component
+  name: create-projects
   nodeFilterEditable: false
   options:
   - description: the global project id (i.e. bhw for basic hello world)
     name: project_id
     required: true
-  - description: the id of the component to delete
-    name: component_id
-    required: true
-  - description: git url of the component to delete
-    name: git_url_http
   - description: openshift token to log on to openshift
     name: openshift_api_token
     secure: true
     storagePath: keys/openshift-api-token
     valueExposed: true
+  - description: the admin of the project, must be the openshift username
+    name: project_admin
+  - description: the groups with special entitlements, key value pairs with semicolon, can be null than everyone can edit
+    name: project_groups
   scheduleEnabled: true
   sequence:
     commands:
@@ -32,9 +30,9 @@
       exec: cd /tmp/rundeck_${job.id}_${job.execid} && git clone ${globals.bitbucket_sshhost}/opendevstack/ods-project-quickstarters.git && cd ods-project-quickstarters && git checkout origin/production
     - description: create docker container for openshift client
       exec: cd /tmp/rundeck_${job.id}_${job.execid}/ods-project-quickstarters/ocp-templates && sudo docker build --build-arg OC_IP=${globals.openshift_apihost_lookup} -t oc .
-    - description: delete openshift component
-      exec: cd /tmp/rundeck_${job.id}_${job.execid}/ods-project-quickstarters/ocp-templates  && sudo docker run --rm oc /bin/bash -c 'oc login ${globals.openshift_apihost} --token=${option.openshift_api_token} && ./delete-component.sh -p ${option.project_id} -c "${option.component_id}" -b "https://fake-domain.com" '
+    - description: create openshift projects (dev / test / cd with jenkins)
+      exec: cd /tmp/rundeck_${job.id}_${job.execid}/ods-project-quickstarters/ocp-templates  && sudo docker run --rm oc /bin/bash -c "oc login ${globals.openshift_apihost} --token=${option.openshift_api_token} && ./create-projects.sh -p ${option.project_id} -n ${globals.nexus_host} -a ${option.project_admin} -e ${option.project_groups}"
     keepgoing: false
     strategy: node-first
-  uuid: 33a85b29-0199-4059-b1fb-d0c254e89fab
+  uuid: 00f767ef-347f-480e-8ad3-bf2aed3abf5d
 
