--- a/jenkins-slaves/python/Dockerfile.rhel7
+++ b/jenkins-slaves/python/Dockerfile.rhel7
@@ -5,51 +5,29 @@ MAINTAINER Michael Sauter <michael.sauter@boehringer-ingelheim.com>
 ENV PYTHON_VERSION=3.6.0
 ENV INSTALL_PKGS="yum-utils groupinstall development gcc make openssl-devel zlib-devel"
 
-# Install Python
-# Option 1:
-#   RUN set -x \
-#       && yum install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-$(rpm -E '%{rhel}').noarch.rpm \
-#       && yum install -y https://centos7.iuscommunity.org/ius-release.rpm \
-#       && yum install -y python36u python36u-pip \
-#       && ls -lrt /usr/bin/python \
-#       && ls -lrt /usr/bin/python* \
-#       && ln -s /usr/bin/python3.6 /usr/local/sbin/python3
-
-# Option 2
 RUN set -x \
     && yum install -y --setopt=tsflags=nodocs $INSTALL_PKGS \
     && yum clean all \
-    && rm -rf /var/cache/yum/* \
-    && cd /tmp
+    && rm -rf /var/cache/yum/*
 
-RUN curl -O https://www.python.org/ftp/python/${PYTHON_VERSION}/Python-${PYTHON_VERSION}.tgz \
-    && tar xzf Python-${PYTHON_VERSION}.tgz \
-    && cd Python-${PYTHON_VERSION} \
+RUN cd /tmp \
+    && curl -O https://www.python.org/ftp/python/${PYTHON_VERSION}/Python-${PYTHON_VERSION}.tgz \
+    && tar xzf Python-${PYTHON_VERSION}.tgz -C / \
+    && rm -rf Python-${Python_VERSION}.tgz
+
+RUN cd /Python-${PYTHON_VERSION} \
     && ./configure \
     && make altinstall \
-    && cd ..
-
-RUN rm -rf Python-${Python_VERSION} \
-    && yum remove -y $INSTALL_PKGS \
     && ln -s /Python-${PYTHON_VERSION}/python /usr/local/sbin/python3 \
-    && python3 -V
+    && python3 -V \
+    && chmod a+rx /Python-${PYTHON_VERSION} \
+    && chmod a+rx /Python-${PYTHON_VERSION}/python \
+    && yum remove -y $INSTALL_PKGS
 
 RUN curl "https://bootstrap.pypa.io/get-pip.py" -o "get-pip.py" \
     && python3 get-pip.py
 
 # Upgrade PIP
 RUN pip3 install --upgrade pip \
-    && pip3 -V
-
-# Continue as non-root
-RUN chown -R 1001:0 $HOME && \
-    chmod -R g+rw $HOME
-USER 1001
-ENV PATH=~/.local/bin:$PATH
-
-# Install packages
-RUN pip3 install --user requests boto3 argparse botocore awscli pycodestyle \
-#    && ln -s ~/.local/bin/aws /usr/local/sbin/aws \
-#    && ~/.local/bin/aws --version
-    && PATH=$PATH:~/.local/bin/ \
-    && aws --version
+        && pip3 -V \
+        && pip3 install virtualenv pycodestyle
