--- a/jenkins-slaves/airflow/Dockerfile.rhel7
+++ b/jenkins-slaves/airflow/Dockerfile.rhel7
@@ -13,40 +13,51 @@ ENV LANG en_US.UTF-8
 ENV LC_ALL en_US.UTF-8
 ENV LC_CTYPE en_US.UTF-8
 ENV LC_MESSAGES en_US.UTF-8
-ENV NODEJS_VERSION=8.11 \
-    NPM_CONFIG_PREFIX=$HOME/.npm-global \
-    PATH=$HOME/node_modules/.bin/:$HOME/.npm-global/bin/:$PATH
-ENV PATH=/opt/rh/rh-python36/root/usr/bin${PATH:+:${PATH}} \
-    LD_LIBRARY_PATH=/opt/rh/rh-python36/root/usr/lib64${LD_LIBRARY_PATH:+:${LD_LIBRARY_PATH}} \
-    MANPATH=/opt/rh/rh-python36/root/usr/share/man:$MANPATH \
+
+ENV PATH=$HOME/node_modules/.bin:$HOME/.npm-global/bin:/opt/rh/rh-nodejs8/root/usr/bin:/opt/rh/rh-python36/root/usr/bin${PATH:+:${PATH}} \
+    LD_LIBRARY_PATH=/opt/rh/rh-nodejs8/root/usr/lib64:/opt/rh/rh-python36/root/usr/lib64${LD_LIBRARY_PATH:+:${LD_LIBRARY_PATH}} \
+    MANPATH=/opt/rh/rh-nodejs8/root/usr/share/man:/opt/rh/rh-python36/root/usr/share/man:$MANPATH \
     PKG_CONFIG_PATH=/opt/rh/rh-python36/root/usr/lib64/pkgconfig${PKG_CONFIG_PATH:+:${PKG_CONFIG_PATH}} \
     XDG_DATA_DIRS="/opt/rh/rh-python36/root/usr/share:${XDG_DATA_DIRS:-/usr/local/share:/usr/share}" \
+    NPM_CONFIG_PREFIX=$HOME/.npm-global \
     BASH_ENV=/usr/local/bin/scl_enable \
     ENV=/usr/local/bin/scl_enable \
     PROMPT_COMMAND=". /usr/local/bin/scl_enable"
 
-# Python 3.6
+COPY contrib/bin/scl_enable /usr/local/bin/scl_enable
+COPY contrib/npmrc $HOME/.npm-global/etc/npmrc
+
+# Enable rhel-server-rhscl-7-rpms repo
 RUN set -x && \
     yum-config-manager --enable rhel-server-rhscl-7-rpms && \
     yum-config-manager --disable rhel-7-server-htb-rpms && \
-    yum makecache && \
-    yum -y install @development && \
+    yum makecache
+
+# Python 3.6 and NodeJS 8
+RUN yum -y install @development && \
+    yum -y install rh-nodejs8 && \
     yum -y install rh-python36 && \
     yum -y install rh-python36-numpy \
                     rh-python36-scipy \
                     rh-python36-python-tools \
                     rh-python36-python-six
 
-COPY contrib/bin/scl_enable /usr/local/bin/scl_enable
+# Configuring npm
+RUN sed -i "s|NEXUS_HOST|$NEXUS_HOST|g" $HOME/.npm-global/etc/npmrc && \
+    sed -i "s|NEXUS_AUTH|$(echo -n $NEXUS_AUTH | base64)|g" $HOME/.npm-global/etc/npmrc && \
+    npm config set ca=null && \
+    npm config set strict-ssl=false
 
-# Upgrade pip
+# Upgrade pip and npm
 RUN pip install --upgrade pip && \
     pip -V && \
-    pip install virtualenv pycodestyle
+    pip install virtualenv pycodestyle && \
+    npm install npm && \
+    npm --version
 
 # Configure pip SSL validation
-RUN pip config set global.cert /etc/ssl/certs/ca-bundle.crt \
-    && pip config list
+RUN pip config set global.cert /etc/ssl/certs/ca-bundle.crt && \
+    pip config list
 
 # Airflow
 RUN buildDeps=' \
@@ -78,19 +89,3 @@ RUN buildDeps=' \
     && pip install 'redis>=3.2.0,<4' \
     && yum clean all \
     && rm -rf /var/cache/yum
-
-# NodeJS 8
-RUN curl --silent --location https://rpm.nodesource.com/setup_8.x | bash - && \
-    yum install -y nodejs && \
-    yum install -y gcc-c++ make && \
-    curl --silent --location https://dl.yarnpkg.com/rpm/yarn.repo -o /etc/yum.repos.d/yarn.repo && \
-    yum install -y yarn && \
-    yum clean all -y
-
-COPY contrib/npmrc $HOME/.npm-global/etc/npmrc
-
-RUN sed -i "s|NEXUS_HOST|$NEXUS_HOST|g" $HOME/.npm-global/etc/npmrc && \
-    sed -i "s|NEXUS_AUTH|$(echo -n $NEXUS_AUTH | base64)|g" $HOME/.npm-global/etc/npmrc && \
-    npm config set ca=null && \
-    npm config set strict-ssl=false && \
-    npm --version
