--- a/jenkins-slaves/airflow/Dockerfile.rhel7
+++ b/jenkins-slaves/airflow/Dockerfile.rhel7
@@ -14,18 +14,17 @@ ENV LC_ALL en_US.UTF-8
 ENV LC_CTYPE en_US.UTF-8
 ENV LC_MESSAGES en_US.UTF-8
 
-ENV PATH=$HOME/node_modules/.bin:$HOME/.npm-global/bin:/opt/rh/rh-nodejs8/root/usr/bin:/opt/rh/rh-python36/root/usr/bin${PATH:+:${PATH}} \
+ENV PATH=$HOME/node_modules/.bin:/opt/rh/rh-nodejs8/root/usr/bin:/opt/rh/rh-python36/root/usr/bin${PATH:+:${PATH}} \
     LD_LIBRARY_PATH=/opt/rh/rh-nodejs8/root/usr/lib64:/opt/rh/rh-python36/root/usr/lib64${LD_LIBRARY_PATH:+:${LD_LIBRARY_PATH}} \
     MANPATH=/opt/rh/rh-nodejs8/root/usr/share/man:/opt/rh/rh-python36/root/usr/share/man:$MANPATH \
     PKG_CONFIG_PATH=/opt/rh/rh-python36/root/usr/lib64/pkgconfig${PKG_CONFIG_PATH:+:${PKG_CONFIG_PATH}} \
     XDG_DATA_DIRS="/opt/rh/rh-python36/root/usr/share:${XDG_DATA_DIRS:-/usr/local/share:/usr/share}" \
-    NPM_CONFIG_PREFIX=$HOME/.npm-global \
     BASH_ENV=/usr/local/bin/scl_enable \
     ENV=/usr/local/bin/scl_enable \
     PROMPT_COMMAND=". /usr/local/bin/scl_enable"
 
 COPY contrib/bin/scl_enable /usr/local/bin/scl_enable
-COPY contrib/npmrc $HOME/.npm-global/etc/npmrc
+COPY contrib/npmrc $HOME/.npmrc
 
 # Enable rhel-server-rhscl-7-rpms repo
 RUN set -x && \
@@ -43,8 +42,8 @@ RUN yum -y install @development && \
                     rh-python36-python-six
 
 # Configuring npm
-RUN sed -i "s|NEXUS_HOST|$NEXUS_HOST|g" $HOME/.npm-global/etc/npmrc && \
-    sed -i "s|NEXUS_AUTH|$(echo -n $NEXUS_AUTH | base64)|g" $HOME/.npm-global/etc/npmrc && \
+RUN sed -i "s|NEXUS_HOST|$NEXUS_HOST|g" $HOME/.npmrc && \
+    sed -i "s|NEXUS_AUTH|$(echo -n $NEXUS_AUTH | base64)|g" $HOME/.npmrc && \
     npm config set ca=null && \
     npm config set strict-ssl=false
 
@@ -52,7 +51,8 @@ RUN sed -i "s|NEXUS_HOST|$NEXUS_HOST|g" $HOME/.npm-global/etc/npmrc && \
 RUN pip install --upgrade pip && \
     pip -V && \
     pip install virtualenv pycodestyle && \
-    npm install npm && \
+    # npm install -g npm && \
+    # npm install -g @angular/cli@1.6.5 --unsafe-perm=true --allow-root && \
     npm --version
 
 # Configure pip SSL validation
