--- a/ocp-templates/templates/cd-jenkins-webhook-proxy.yml
+++ b/ocp-templates/templates/cd-jenkins-webhook-proxy.yml
@@ -87,6 +87,8 @@ objects:
         restartPolicy: Always
         schedulerName: default-scheduler
         securityContext: {}
+        serviceAccount: jenkins
+        serviceAccountName: jenkins
         terminationGracePeriodSeconds: 30
     test: false
     triggers:
