--- a/ocp-templates/templates/elasticsearch/elasticsearch-persistent-node-template.yaml
+++ b/ocp-templates/templates/elasticsearch/elasticsearch-persistent-node-template.yaml
@@ -34,6 +34,8 @@ objects:
     kind: PersistentVolumeClaim
     metadata:
       name: ${COMPONENT_NAME}
+      labels:
+        cluster: ${CLUSTER_NAME}
     spec:
       accessModes:
         - ReadWriteOnce
